# model_inference_engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  main.py  pyproject.toml  test_main.http  visualize_detections.py  visualize_detections_gemini.py
my_ml_backend/: Dockerfile  README.md  _wsgi.py  docker-compose.yml  model.py  requirements.txt  test_api.py
